src/test/ui/nll/return-ref-mut-issue-46557.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/return-ref-mut-issue-46557.rs:17:21
   |
LL |     let ref mut x = 1234543; //~ ERROR temporary value dropped while borrowed [E0716]
   |                     ^^^^^^^ creates a temporary which is freed while still in use
LL |     x
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
